Fix carousel image/button spacing & centering

--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -2,7 +2,7 @@
   max-width: 100%;
   height: 100%;
   display: grid;
-  place-items: center;
+  justify-content: center;
 
   button {
     z-index: 0;
